--- a/test/fixtures/custom_activities.yml
+++ b/test/fixtures/custom_activities.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: custom_activities
+#
+#  id              :integer          not null, primary key
+#  name            :string
+#  completion_time :integer
+#  link            :string
+#  snippet         :string
+#  content         :string
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
