--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -3,11 +3,11 @@
 # Table name: activities
 #
 #  id              :integer          not null, primary key
-#  name            :string
-#  completion_time :integer
-#  link            :string
-#  snippet         :string
+#  title           :string
 #  content         :string
+#  completion_time :integer
+#  content_type    :string
+#  link            :string
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
 #
@@ -15,15 +15,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  completion_time: 1
-  link: MyString
-  snippet: MyString
+  title: MyString
   content: MyString
+  completion_time: 1
+  content_type: MyString
+  link: MyString
 
 two:
-  name: MyString
-  completion_time: 1
-  link: MyString
-  snippet: MyString
+  title: MyString
   content: MyString
+  completion_time: 1
+  content_type: MyString
+  link: MyString
