--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -16,12 +16,15 @@
 #  last_sign_in_at        :datetime
 #  current_sign_in_ip     :inet
 #  last_sign_in_ip        :inet
+#  username               :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: MyString1
+  email: email1@website.com
 
 two:
-  name: MyString
+  name: MyString2
+  email: email2@website.com
