--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,6 +9,7 @@
 #  password_digest :string
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
+#  role            :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
