--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -10,6 +10,7 @@
 #  link            :string
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
+#  like_meter      :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
