--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -2,17 +2,15 @@
 #
 # Table name: activities
 #
-#  id                 :integer          not null, primary key
-#  title              :string
-#  content            :string
-#  completion_time    :integer
-#  content_type       :string
-#  link               :string
-#  created_at         :datetime         not null
-#  updated_at         :datetime         not null
-#  like_count         :integer
-#  user_liked_list    :integer          default([]), is an Array
-#  user_disliked_list :integer          default([]), is an Array
+#  id              :integer          not null, primary key
+#  title           :string
+#  content         :string
+#  completion_time :integer
+#  content_type    :string
+#  link            :string
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#  like_count      :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
