--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ database.yml
 
 # Ignore .DS_Store files
 .DS_Store
+
+# Ignore precompile files
+public/assets/.sprockets-manifest-*
+public/assets/application-*
+public/assets/backbone/templates/unauthenticated/signup-*
+public/assets/backbone/views/signup_view-*
+public/assets/helpers/sinon-*
+public/assets/spec_helper-*
+public/assets/user_login_model_spec-*
