--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ public/assets/backbone/views/signup_view-*
 public/assets/helpers/sinon-*
 public/assets/spec_helper-*
 public/assets/user_login_model_spec-*
+
+# Ignore Code Coverage files
+coverage
